Fixed overflow in modal

--- a/src/components/ContactForm/styles.module.scss
+++ b/src/components/ContactForm/styles.module.scss
@@ -10,7 +10,7 @@
   width: 100%;
   // overflow: auto;
   overflow: hidden;
-  resize: both;
+  resize: vertical;
   min-height: 5rem;
   line-height: 20px;
 }
